update file jenkins

--- a/Jenkins/python/Jenkinsfile
+++ b/Jenkins/python/Jenkinsfile
@@ -44,7 +44,7 @@ pipeline {
             steps {
                 script {
                     sh """
-                        docker build -t ${ECR_IMAGE}:${IMAGE_TAG} .
+                        docker build -t ${ECR_IMAGE}:${IMAGE_TAG} app/
                     """
                 }
             }
@@ -75,7 +75,7 @@ pipeline {
                             kubectl set image deployment/${K8S_DEPLOYMENT} ${K8S_DEPLOYMENT}=${ECR_IMAGE}:${IMAGE_TAG} -n ${K8S_NAMESPACE}
                         else
                             echo "🚀 Deployment not found. Creating new deployment from YAML..."
-                            kubectl apply -f Jenkins/python/k8s/deployment.yaml
+                            kubectl apply -f cicd/Jenkins/python/k8s/deployment.yaml
                         fi
 
                         # Wait for rollout to complete
